fixed spacing and alignment for iphones

--- a/src/App.css
+++ b/src/App.css
@@ -226,7 +226,7 @@ p {
   background: #fcfabb;
   color: #272730;
   padding: 8px 10px;
-  margin-right: 4px;
+  margin-right: 10px;
   border-radius: 5px;
   cursor: pointer;
   text-align: left;
@@ -263,17 +263,17 @@ p {
     /* width: 70px;
     height: 70px; */
     /* top: 1rem; */
-    left: 4rem;
+    left: 2rem;
   }
   .menu.right {
     top: .4rem;
-    right: 1rem;
+    right: 0rem;
   }
   .jumbo h1 {
-    font-size: 76px;
+    font-size: 72px;
     line-height: 70px;
     letter-spacing: 0px;
-    margin-left: 0px;
+    margin-left: 10px;
   }
 }
 
